src/test/ui/issues/issue-51022.stderr
error[E0131]: `main` function is not allowed to have generic parameters
  --> $DIR/issue-51022.rs:1:8
   |
LL | fn main<'a>() { }
   |        ^^^^ `main` cannot have generic parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0131`.
